fix: spacing

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -258,7 +258,8 @@ h4,
 h5 {
 	font-weight: bold;
 	font-size: 1rem;
-	margin-bottom: 1.5rem;
+	margin-bottom: 1rem;
+  margin-top: 1.5rem;
 }
 
 section h1:first-child {
